force-app/main/default/objects/History_Stock_Product__c/History_Stock_Product__c.object-meta.xml
<CustomObject>
    <label>History Stock Product</label>
    <nameField>
        <label>History Stock Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Stock Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>