force-app/main/default/objects/History_Stock_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DLR/DO account that owns the Location</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>History Stock Products</relationshipLabel>
    <relationshipName>History_Stock_Products</relationshipName>
    <type>Lookup</type>
</CustomField>