force-app/main/default/objects/History_Stock_Product__c/fields/DO_Code__c.field-meta.xml
<CustomField>
    <fullName>DO_Code__c</fullName>
    <formula>Account__r.DO_DL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO Code</label>
    <type>Text</type>
</CustomField>