force-app/main/default/objects/History_Stock_Product__c/fields/Inventory_Stock_Rotation__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Stock_Rotation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inventory Stock Rotation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>