force-app/main/default/objects/History_Stock_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>History Stock Products</relationshipLabel>
    <relationshipName>History_Stock_Products</relationshipName>
    <type>Lookup</type>
</CustomField>