force-app/main/default/objects/History_Stock_Product__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <formula>Product__r.Model_Code__c+  Product__r.Color_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>