force-app/main/default/objects/History_Stock_Product__c/fields/Stock_At_The_Start__c.field-meta.xml
<CustomField>
    <fullName>Stock_At_The_Start__c</fullName>
    <label>Initial Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>