force-app/main/default/objects/History_Stock_Product__c/fields/Stock_Remain__c.field-meta.xml
<CustomField>
    <fullName>Stock_Remain__c</fullName>
    <label>Stock At The End Of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>