force-app/main/default/objects/History_Stock_Product__c/fields/Total_Bike_Stock_In__c.field-meta.xml
<CustomField>
    <fullName>Total_Bike_Stock_In__c</fullName>
    <label>Total Bike Stock In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>