force-app/main/default/objects/History_Stock_Product__c/fields/Total_Stock_Out_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock_Out_Of_Month__c</fullName>
    <label>Total Stock Out Of Month</label>
    <summarizedField>History_Stock_Product_Detail__c.Stock_Out__c</summarizedField>
    <summaryForeignKey>History_Stock_Product_Detail__c.History_Stock_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>