force-app/main/default/objects/History_Stock_Product__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>History Stock Products</relationshipLabel>
    <relationshipName>History_Stock_Products</relationshipName>
    <type>Lookup</type>
</CustomField>