force-app/main/default/objects/History_Stock_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Color_Code__c</columns>
    <columns>Stock_At_The_Start__c</columns>
    <columns>Stock_Remain__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Stock_In_Of_Month__c</columns>
    <columns>Total_Stock_Out_Of_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DO_Code__c</field>
        <operation>equals</operation>
        <value>RY01A</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>1/1/2024</value>
    </filters>
    <label>All</label>
</ListView>